[gd_scene load_steps=22 format=3 uid="uid://cx0dws520nbsm"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_4mu30"]
[ext_resource type="Texture2D" uid="uid://b8f7d8gcmf6x2" path="res://sprites/characters/boss_attack.png" id="1_5y4h8"]
[ext_resource type="Texture2D" uid="uid://b84g0uu1uruu5" path="res://sprites/characters/boss_idle.png" id="2_coyla"]
[ext_resource type="Texture2D" uid="uid://6l2m4bhesi5e" path="res://sprites/characters/boss_attack_hit.png" id="3_v2hyq"]
[ext_resource type="Texture2D" uid="uid://bnt4r5viq8dr8" path="res://sprites/characters/boss_idle_hit.png" id="5_hnr7j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_plqrb"]
atlas = ExtResource("1_5y4h8")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyeo2"]
atlas = ExtResource("1_5y4h8")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntbj7"]
atlas = ExtResource("1_5y4h8")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_24sip"]
atlas = ExtResource("1_5y4h8")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlce8"]
atlas = ExtResource("1_5y4h8")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_la1of"]
atlas = ExtResource("3_v2hyq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eycqy"]
atlas = ExtResource("3_v2hyq")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccyra"]
atlas = ExtResource("3_v2hyq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x45rn"]
atlas = ExtResource("3_v2hyq")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_swxhi"]
atlas = ExtResource("3_v2hyq")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3rn3"]
atlas = ExtResource("2_coyla")
region = Rect2(0, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3o1c"]
atlas = ExtResource("2_coyla")
region = Rect2(96, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5f7q"]
atlas = ExtResource("5_hnr7j")
region = Rect2(0, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6wad"]
atlas = ExtResource("5_hnr7j")
region = Rect2(96, 0, 96, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_hwll6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_plqrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyeo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntbj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24sip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlce8")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_la1of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eycqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccyra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x45rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swxhi")
}],
"loop": false,
"name": &"attack_hit",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3rn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3o1c")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5f7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6wad")
}],
"loop": true,
"name": &"idle_hit",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eyjwc"]
size = Vector2(46, 127)

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_4mu30")

[node name="BossSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1.32813, 1.4375)
sprite_frames = SubResource("SpriteFrames_hwll6")
animation = &"attack"
autoplay = "idle"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 26.5)
shape = SubResource("RectangleShape2D_eyjwc")

[node name="HitEffectTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0

[connection signal="timeout" from="HitEffectTimer" to="." method="_on_hit_effect_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
